# python-template

./: .cz-config.js  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yaml  commitlint.config.js  package-lock.json  package.json  pyproject.toml
